--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.0.2", features = ["derive"] }
+utmp-rs = "0.3.0"
+bincode = "1.3.3"
+serde = { version = "1.0.145", features = ["derive"] }
