--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -12,3 +12,5 @@ utmp-rs = "0.3.0"
 bincode = "1.3.3"
 serde = { version = "1.0.145", features = ["derive"] }
 ssh2 = "0.9.3"
+openssl = { version = "0.10", features = ["vendored"] }
+rpassword = "0.0.4"
